--- a/index.html
+++ b/index.html
@@ -36,34 +36,24 @@
             <h3>And I'm a <span class="multiple-text"></span></h3>
 
             <p>
-                As a Frontend Developer, I specialize in creating modern, responsive, and visually appealing web interfaces using clean and efficient code.
+                As a Frontend Developer, I create modern, responsive, and visually appealing web interfaces.
             </p>
 
             <!-- Social Media Links -->
             <div class="social-media">
-                <a href="javascript:void(0);" onclick="showFacebookPopup()">
-                    <i class="bx bxl-facebook"></i> 
-                </a>
-                <a href="javascript:void(0);" onclick="showLinkedInPopup()">
-                    <i class="bx bxl-linkedin"></i>
-                </a>
-                <a href="javascript:void(0);" onclick="showWhatsAppPopup()">
-                    <i class="bx bxl-whatsapp"></i>
-                </a>
-                <a href="https://twitter.com/yourusername" target="_blank">
-                    <i class="bx bxl-twitter"></i>
-                </a>
-                <a href="https://www.instagram.com/yourusername" target="_blank">
-                    <i class="bx bxl-instagram"></i>
-                </a>
+                <a href="javascript:void(0);" onclick="showFacebookPopup()"><i class="bx bxl-facebook"></i></a>
+                <a href="javascript:void(0);" onclick="showLinkedInPopup()"><i class="bx bxl-linkedin"></i></a>
+                <a href="javascript:void(0);" onclick="showWhatsAppPopup()"><i class="bx bxl-whatsapp"></i></a>
+                <a href="https://twitter.com/yourusername" target="_blank"><i class="bx bxl-twitter"></i></a>
+                <a href="https://www.instagram.com/yourusername" target="_blank"><i class="bx bxl-instagram"></i></a>
             </div>
 
             <a href="#" class="btn">Download CV</a>
         </div>
 
-        <!-- Image -->
+        <!-- Image Section (root) -->
         <div class="home-image">
-            <img src="images/home.jpg" alt="Home Image">
+            <img src="home.jpg" alt="Home Image">
         </div>
     </section>
 
@@ -71,24 +61,24 @@
     <div id="facebookPopup" class="popup">
         <div class="popup-content">
             <p>Do you want to visit my Facebook profile?</p>
-            <button onclick="window.location.href='https://www.facebook.com/collinsbizo.mulafu.7'">Yes, take me there!</button>
-            <button onclick="closeFacebookPopup()">No, thanks</button>
+            <button onclick="window.location.href='https://www.facebook.com/collinsbizo.mulafu.7'">Yes</button>
+            <button onclick="closeFacebookPopup()">No</button>
         </div>
     </div>
 
     <div id="linkedinPopup" class="popup">
         <div class="popup-content">
             <p>Do you want to visit my LinkedIn profile?</p>
-            <button onclick="window.location.href='https://www.linkedin.com/in/omega-mulafu-5263a1248'">Yes, take me there!</button>
-            <button onclick="closeLinkedInPopup()">No, thanks</button>
+            <button onclick="window.location.href='https://www.linkedin.com/in/omega-mulafu-5263a1248'">Yes</button>
+            <button onclick="closeLinkedInPopup()">No</button>
         </div>
     </div>
 
     <div id="whatsappPopup" class="popup">
         <div class="popup-content">
             <p>Do you want to message me on WhatsApp?</p>
-            <button onclick="window.location.href='https://wa.me/0778387003'">Yes, message me!</button>
-            <button onclick="closeWhatsAppPopup()">No, thanks</button>
+            <button onclick="window.location.href='https://wa.me/0778387003'">Yes</button>
+            <button onclick="closeWhatsAppPopup()">No</button>
         </div>
     </div>
 
@@ -116,5 +106,4 @@
 
 </body>
 </html>
-
 
