--- a/index.html
+++ b/index.html
@@ -5,13 +5,53 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Omega Mulafu Portfolio</title>
+    <title>Animated Portfolio Website</title>
 
     <!-- Boxicons for social media icons -->
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="styles.css">
+    
+    <!-- Popup CSS -->
+    <style>
+        .popup {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.7);
+            justify-content: center;
+            align-items: center;
+            z-index: 1000;
+        }
+
+        .popup-content {
+            background-color: #fff;
+            padding: 30px;
+            border-radius: 8px;
+            text-align: center;
+            max-width: 500px;
+            width: 80%;
+        }
+
+        .popup-content button {
+            background-color: #0ef;
+            color: #1f242d;
+            border: none;
+            padding: 10px 20px;
+            font-size: 16px;
+            cursor: pointer;
+            border-radius: 5px;
+            margin-top: 20px;
+        }
+
+        .popup-content button:hover {
+            background-color: #0c6;
+        }
+    </style>
 </head>
 
 <body>
@@ -19,6 +59,7 @@
     <!-- Header -->
     <header class="header">
         <a href="#" class="logo">Portfolio</a>
+
         <nav class="navbar">
             <a href="#" class="active">Home</a>
             <a href="#about">About</a>
@@ -36,74 +77,116 @@
             <h3>And I'm a <span class="multiple-text"></span></h3>
 
             <p>
-                As a Frontend Developer, I create modern, responsive, and visually appealing web interfaces.
+                As a Frontend Developer, I specialize in creating modern, responsive, and visually appealing web interfaces using clean and efficient code.
             </p>
 
-            <!-- Social Media Links -->
+            <!-- Social Media Links Section -->
             <div class="social-media">
-                <a href="javascript:void(0);" onclick="showFacebookPopup()"><i class="bx bxl-facebook"></i></a>
-                <a href="javascript:void(0);" onclick="showLinkedInPopup()"><i class="bx bxl-linkedin"></i></a>
-                <a href="javascript:void(0);" onclick="showWhatsAppPopup()"><i class="bx bxl-whatsapp"></i></a>
-                <a href="https://twitter.com/yourusername" target="_blank"><i class="bx bxl-twitter"></i></a>
-                <a href="https://www.instagram.com/yourusername" target="_blank"><i class="bx bxl-instagram"></i></a>
+                <!-- Facebook Icon with Popup on Click -->
+                <a href="javascript:void(0);" onclick="showFacebookPopup()">
+                    <i class="bx bxl-facebook"></i> 
+                </a>
+                <!-- LinkedIn Icon with Popup on Click -->
+                <a href="javascript:void(0);" onclick="showLinkedInPopup()">
+                    <i class="bx bxl-linkedin"></i>
+                </a>
+                <!-- WhatsApp Icon with Popup on Click -->
+                <a href="javascript:void(0);" onclick="showWhatsAppPopup()">
+                    <i class="bx bxl-whatsapp"></i>
+                </a>
+                <!-- Other Social Icons -->
+                <a href="https://twitter.com/yourusername" target="_blank">
+                    <i class="bx bxl-twitter"></i>
+                </a>
+                <a href="https://www.instagram.com/yourusername" target="_blank">
+                    <i class="bx bxl-instagram"></i>
+                </a>
             </div>
 
+            <!-- Download CV Button -->
             <a href="#" class="btn">Download CV</a>
         </div>
 
-        <!-- Image Section (root) -->
+        <!-- Image Section -->
         <div class="home-image">
-            <img src="home.jpg" alt="Home Image">
+            <img src="images/home.jpg" alt="Home Image">
         </div>
     </section>
 
-    <!-- Popups -->
+    <!-- Popup Section for Facebook -->
     <div id="facebookPopup" class="popup">
         <div class="popup-content">
             <p>Do you want to visit my Facebook profile?</p>
-            <button onclick="window.location.href='https://www.facebook.com/collinsbizo.mulafu.7'">Yes</button>
-            <button onclick="closeFacebookPopup()">No</button>
+            <button onclick="window.location.href='https://www.facebook.com/collinsbizo.mulafu.7'">Yes, take me there!</button>
+            <button onclick="closeFacebookPopup()">No, thanks</button>
         </div>
     </div>
 
+    <!-- Popup Section for LinkedIn -->
     <div id="linkedinPopup" class="popup">
         <div class="popup-content">
             <p>Do you want to visit my LinkedIn profile?</p>
-            <button onclick="window.location.href='https://www.linkedin.com/in/omega-mulafu-5263a1248'">Yes</button>
-            <button onclick="closeLinkedInPopup()">No</button>
+            <button onclick="window.location.href='https://www.linkedin.com/in/omega-mulafu-5263a1248'">Yes, take me there!</button>
+            <button onclick="closeLinkedInPopup()">No, thanks</button>
         </div>
     </div>
 
+    <!-- Popup Section for WhatsApp -->
     <div id="whatsappPopup" class="popup">
         <div class="popup-content">
             <p>Do you want to message me on WhatsApp?</p>
-            <button onclick="window.location.href='https://wa.me/0778387003'">Yes</button>
-            <button onclick="closeWhatsAppPopup()">No</button>
+            <button onclick="window.location.href='https://wa.me/0778387003'">Yes, message me!</button>
+            <button onclick="closeWhatsAppPopup()">No, thanks</button>
         </div>
     </div>
 
-    <!-- Typed.js -->
+    <!-- Typed.js Script (for animated text) -->
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
     <script>
         var type = new Typed(".multiple-text", {
-            strings: ["Frontend Developer", "Backend Web Developer", "Blogger", "UI/UX Designer"],
+            strings: ["Frontend Developer", "Backend We Developer", "Blogger", "UI/UX Design"],
             typeSpeed: 100,
             backSpeed: 100,
             backDelay: 1000,
             loop: true
         });
 
-        function showFacebookPopup() { document.getElementById("facebookPopup").style.display = "flex"; }
-        function closeFacebookPopup() { document.getElementById("facebookPopup").style.display = "none"; }
-        function showLinkedInPopup() { document.getElementById("linkedinPopup").style.display = "flex"; }
-        function closeLinkedInPopup() { document.getElementById("linkedinPopup").style.display = "none"; }
-        function showWhatsAppPopup() { document.getElementById("whatsappPopup").style.display = "flex"; }
-        function closeWhatsAppPopup() { document.getElementById("whatsappPopup").style.display = "none"; }
+        // Show Facebook Popup
+        function showFacebookPopup() {
+            document.getElementById("facebookPopup").style.display = "flex";
+        }
+
+        // Close Facebook Popup
+        function closeFacebookPopup() {
+            document.getElementById("facebookPopup").style.display = "none";
+        }
+
+        // Show LinkedIn Popup
+        function showLinkedInPopup() {
+            document.getElementById("linkedinPopup").style.display = "flex";
+        }
+
+        // Close LinkedIn Popup
+        function closeLinkedInPopup() {
+            document.getElementById("linkedinPopup").style.display = "none";
+        }
+
+        // Show WhatsApp Popup
+        function showWhatsAppPopup() {
+            document.getElementById("whatsappPopup").style.display = "flex";
+        }
+
+        // Close WhatsApp Popup
+        function closeWhatsAppPopup() {
+            document.getElementById("whatsappPopup").style.display = "none";
+        }
     </script>
 
     <!-- Custom JS -->
     <script src="script.js"></script>
 
 </body>
+
 </html>
+
 
